--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "nodemon ."
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
     "connect-mongo": "^3.2.0",
     "create-react-app": "^3.0.1",
